--- a/post.html
+++ b/post.html
@@ -1,35 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>{{ post.metadata.title }} - {{ config.title }}</title>
-    <meta name="viewport" content="width=device-width">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="utf-8">
+    <title>{{ config.title }}</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/skeleton.css">
     <link rel="stylesheet" href="/css/main.css">
 </head>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="one-half column" style="margin-top: 5%">
+                {% include "partials/navigation.html" %}
+                    <ul>
+                        {% for category in post.metadata.categories %}
+                            <li class="categories">
+                                <a class="categoryTag {{ category }}" 
+                                    href="/categories/{% if post.metadata.default_lang %}{{ post.metadata.lang }}/{% endif %}{{ category | lower | trim }}">
+                                    {{ category }}
+                                </a>
+                            </li>
+                        {% endfor %}
+                    </ul>
 
-{% include "partials/navigation.html" %}
-    <body>
-    	<header>
-    	    <h1>
-    	      {{ post.metadata.title }}
-    	    </h1>
-    	</header>
-        <ul>
-        	{% for category in post.metadata.categories %}
-        		<li>
-        			<a class="categoryTag {{ category }}" 
-        				href="/categories/{% if post.metadata.default_lang %}{{ post.metadata.lang }}/{% endif %}{{ category | lower | trim }}">
-        				{{ category }}
-        			</a>
-        		</li>
-        	{% endfor %}
-        </ul>
-
-    	<article>
-    		{{ post.content }}
-    	</article>
-
-    	{% include "partials/footer.html" %}
-    </body>
+                    <article class="content">
+                        {{ post.content }}
+                    </article>
+            </div>
+        </div>
+    </div>
+    {% include "partials/footer.html" %}
+</body>
 </html>
