--- a/page.html
+++ b/page.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,6 @@
 </head>
 <body>
 {% include "./partials/navigation.html" %}
-<body>
 	<header>
 	    <h2>
 	      {{ page.metadata.title }}
